--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,9 @@
     <body class="chrome-popup">
         <div id="content">
             <div style="width:200px;height:200px" id="qr"></div>
-            <img src="placeholder.png" alt="" width="32" height="32" id="fav" />
         </div>
         <script src="libs/zepto.min.js"></script>
-        <script src="libs/qrcode.min.js"></script>
+        <script src="libs/qrcode.js"></script>
         <script src="popup.js"></script>
     </body>
 </html>
